# flagsmith-sql-flag-engine

./: .gitignore  .gitmodules  .pre-commit-config.yaml  CHANGELOG.md  LICENSE.md  Makefile  README.md  docker-compose.yml  pyproject.toml  release-please-config.json  renovate.json
.github/workflows/: ci.yml  publish-codeartifact.yml  publish.yml
src/flagsmith_sql_flag_engine/: __init__.py  binder.py  dialect.py  sanitiser.py  translator.py  utils.py
src/flagsmith_sql_flag_engine/dialects/: __init__.py  clickhouse.py  snowflake.py
tests/: conftest.py  test_binder_clickhouse.py  test_binder_unit.py  test_clickhouse_dialect_unit.py  test_engine.py  test_engine_parity.py  test_sanitiser.py  test_snowflake_dialect_unit.py  test_translator_unit.py  test_utils.py
tests/harnesses/: __init__.py  _base.py  clickhouse.py  snowflake.py
